--- a/waiting-dictionary.tests/waiting-dictionary.tests.csproj
+++ b/waiting-dictionary.tests/waiting-dictionary.tests.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <RootNamespace>Drenalol.WaitingDictionary.Tests</RootNamespace>
         <IsPackable>false</IsPackable>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
